docs(c8run): remove JDK_JAVA_OPTIONS env var detail
Internal implementation detail not relevant to end users.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>